default.conf update

--- a/lb/config/default.conf
+++ b/lb/config/default.conf
@@ -1,6 +1,6 @@
 upstream serv {
-    server serv-a:80;
-    server serv-b:80;
+    server jenkins-serv-a:80;
+    server jenkins-serv-b:80;
 }
 server {
     listen 80;
